first template update

--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -7,6 +7,7 @@
     <select name="role">
         <option value="donor">Donor</option>
         <option value="recipient">Recipient</option>
+        <option value="admin">Admin</option>
     </select><br>
     <button type="submit">Register</button>
 </form>
