--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,13 +7,13 @@
 <body>
    {% if current_user.is_authenticated %}
     <p>Welcome, {{ current_user.username }}!</p>
-    <a href='{{ url_for('main.dashboard') }}'>Dashboard</a> |
+    <a href="{{ url_for('main.dashboard')}}">Dashboard</a> |
     <a href="{{ url_for('auth.logout') }}">Logout</a>
 {% else %}
     <a href="{{ url_for('auth.login') }}">Login</a> |
     <a href="{{ url_for('auth.register') }}">Register</a>
 {% endif %}
-<p>Welcome to Downa connect!</p>
-<p>Downa connect is a platform that connects donors and recipients.</p>
+<p>Welcome to UjamaaFlow!</p>
+<p>UjamaaFlow is a platform that connects donors and recipients.</p>
 </body>
 </html>
